--- a/css/styles.css
+++ b/css/styles.css
@@ -178,6 +178,19 @@ footer {
 .filter-btn:focus {
   color: #2196f3;
 }
+.visually-hidden {
+  .visually-hidden {
+    position: absolute;
+     white-space: nowrap;
+     width: 1px;
+     height: 1px;
+     overflow: hidden;
+     border: 0;
+     padding: 0;
+     clip: rect(0 0 0 0);
+     clip-path: inset(50%);
+     margin: -1px;
+}
 .project {
   font-weight: 700;
   font-size: 18px;
